--- a/style.css
+++ b/style.css
@@ -134,14 +134,15 @@ html, body {
 	border-top: 2px solid var(--color-background-dark);
 }
 .composer_rich_textarea {
-  width: 100% !important;
-  box-shadow: 0px 0px !important;
-  padding-top: 15px !important;
-  padding-left: 20px !important;
-  padding-right: 20px !important;
-  padding-bottom: 15px !important;
-  background-color: var(--color-background-shadow) !important;
-  max-height: 180px;
+	left: 0px !important;
+	width: 100% !important;
+	box-shadow: 0px 0px !important;
+	padding-top: 15px !important;
+	padding-left: 20px !important;
+	padding-right: 20px !important;
+	padding-bottom: 15px !important;
+	background-color: var(--color-background-shadow) !important;
+	max-height: 180px;
 }
 
 .im_send_field_wrap {
