--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ i.icon.icon-tg-title:before {
 .dropdown-menu * {
 	color: var(--color-text) !important;
 }
-.im_dialog_peer {
+.im_dialog_peer, .peer_select_modal_recipient, .peer_select_modal_recipients_list {
 	color: var(--color-text);
 }
 .im_dialogs_col_wrap {
@@ -153,11 +153,19 @@ i.icon.icon-tg-title:before {
 .im_dialogs_scrollable_wrap .active a.im_dialog, .im_dialogs_scrollable_wrap .active a.im_dialog:hover {
 	background-color: var(--color-background-dark) !important;
 }
+.md_modal_body .im_dialogs_scrollable_wrap .active a.im_dialog, .md_modal_body .im_dialogs_scrollable_wrap .active a.im_dialog:hover {
+	background-color: var(--color-background) !important;
+}
 .footer_empty {
 	display: none !important;
 }
-.im_dialogs_scrollable_wrap a.im_dialog_searchpeer, .im_dialogs_scrollable_wrap a.im_dialog_searchpeer:hover, .im_dialogs_scrollable_wrap a.im_dialog_searchpeer_selected, .im_dialogs_scrollable_wrap a.im_dialog_selected {
+.im_dialogs_scrollable_wrap a.im_dialog_selected {
 	background: var(--color-background-shadow) !important;
+}
+.im_dialogs_scrollable_wrap a.im_dialog_searchpeer, .im_dialogs_scrollable_wrap a.im_dialog.im_dialog_searchpeer:hover, .im_dialogs_scrollable_wrap a.im_dialog.im_dialog_searchpeer_selected {
+	background: var(--color-background-dark) !important;
+	transition: inherit;
+    padding-left: 16px;
 }
 .im_dialogs_scrollable_wrap a.im_dialog:hover {
 	background: var(--color-background) !important;
@@ -165,24 +173,31 @@ i.icon.icon-tg-title:before {
 .im_dialog_message, a.im_dialog:hover, .im_short_message_text, a.im_dialog_selected .im_short_message_text, .im_message_webpage_description, .im_message_photo_caption, .im_message_contact_name, .im_message_contact_phone, .im_message_document_caption, .im_message_photo_caption, .im_message_video_caption, a.im_dialog .im_dialog_chat_from_wrap, a.im_dialog .im_short_message_media, a.im_dialog .im_short_message_service{
 	color: var(--color-text-shadow) !important;
 }
-.im_dialogs_scrollable_wrap a.im_dialog:hover, .im_dialogs_scrollable_wrap a.im_dialog_selected {
-	border-radius: 8px;
+.im_dialog_wrap a.im_dialog:hover {
+    transition: padding-left 0.1s ease-out;
+    padding-left: 24px;
 }
+/* fim estilo da lista de mensagens */
+
+/* estilo do chat */
+
 .im_message_webpage_wrap {
 	border-radius: 4px;
 }
-.im_message_article_thumb, .im_message_reply_thumb {
+.im_message_article_thumb {
 	border-radius: 50% !important;
+}
+.im_message_reply_thumb {
+	border-radius: 25% !important;
+	object-fit: cover;
+    min-width: 100%;
+    min-height: 100%;
 }
 .im_message_webpage_article_photo {
     margin: 5px 5px 5px 5px !important;
 }
 .im_message_document_thumb_wrap {
 	background: var(--color-background-dark) !important;
-}
-.im_dialog_wrap a.im_dialog:hover {
-    transition: padding-left 0.1s ease-out;
-    padding-left: 24px;
 }
 .im_dialogs_panel {
     padding: 12px 26px;
@@ -200,12 +215,8 @@ i.icon.icon-tg-title:before {
 .im_dialog_message {
     padding-right: 20px;
 }
-/* fim estilo da lista de mensagens */
-
-/* estilo do chat */
-
 .im_message_text, .composer_rich_textarea {
-	color: var(--color-text) !important;
+	color: var(--color-text);
 }
 .btn-md:hover, .dropdown-menu .divider {
 	background-color: var(--color-background-dark) !important;
@@ -229,6 +240,7 @@ i.icon.icon-tg-title:before {
 }
 .im_bottom_panel_wrap {
 	border-top: 2px solid var(--color-background-dark);
+	max-height: 47px;
 }
 .composer_rich_textarea {
 	left: 0px !important;
@@ -339,11 +351,16 @@ a.im_message_from_photo {
 .im_history_message_wrap.im_message_selected > .im_message_outer_wrap.hasselect > div > div > .im_message_body.im_message_body_media {
     filter: grayscale(1);
 }
+.im_history_selectable .im_message_outer_wrap {
+    pointer-events: none;
+    cursor: default;
+}
 div.im_message_body {
     display: grid !important;
     border: 1px solid transparent;
     transition: 0.1s ease-out;
 	cursor: pointer;
+	pointer-events: initial;
 }
 .im_message_body {
     padding: 3px !important;
@@ -695,7 +712,7 @@ img.im_message_document_thumb {
     padding: 6px 16px !important;
 }
 .im_send_reply_cancel {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 a.im_record.pull-left, span.im_submit_send_label:before, a.pull-left.im_panel_own_photo.peer_photo_init {
     display: none;
@@ -711,7 +728,7 @@ a.im_record.pull-left, span.im_submit_send_label:before, a.pull-left.im_panel_ow
     padding-top: 30px;
 }
 .im_send_panel_wrap {
-    padding-bottom: 0px;
+    padding-bottom: 5px;
 }
 .composer_emoji_insert_btn {
     top: 0px;
@@ -730,12 +747,12 @@ a.im_record.pull-left, span.im_submit_send_label:before, a.pull-left.im_panel_ow
 	margin-right: -10px !important;
 }
 .im_send_reply_form_wrap .im_send_buttons_wrap {
-	position: absolute;
-    max-width: 190px;
-    right: 80px;
-    top: 0px;
-	margin-top: 72px !important;
+	margin-top: 75px !important;
 	margin-right: -10px !important;
+}
+.im_message_reply_wrap {
+    max-height: 40px;
+	min-height: 40px;
 }
 button.btn.btn-md.im_submit.im_submit_send, button.btn.btn-md.im_submit.im_submit_edit {
     margin-top: -5px;
@@ -786,7 +803,7 @@ i.icon.icon-slash{
 	height: inherit;
 }
 .im_edit_panel_border {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 .im_edit_panel_wrap {
     padding-bottom: 10px;
@@ -803,6 +820,19 @@ a.btn.btn-md.btn-md-primary.im_edit_cancel_link, .im_edit_delete_btn, .im_edit_f
 }
 .im_selected_count {
     color: var(--color-text-shadow) !important;
+}
+.im_message_selected .im_message_body {
+    filter: grayscale(1);
+	color: gray;
+}
+.im_message_selected .im_message_body .im_message_text {
+	color: gray;
+}
+.im_message_selected .icon-message-status, .im_history_selectable .im_message_outer_wrap:hover .icon-message-status {
+	display: none;
+}
+.icon-message-status {
+    margin-right: 10px;
 }
 /* fim do estilo do chat */
 
